# linux_app_dev2025

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: 1.gdb  2.gdb  Makefile  range.c
05_Regexps/: Makefile  esub.c  sed.sh  test.sh  test.txt  test_err.txt
06_Tracing/: 0.sh  1.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  8.sh  9.sh  Makefile  move.c  protect.c  protect.sh
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
07_Environmental/test/: test_all.sh
07_Environmental/tests/: test.sh  test_err.sh
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: POTFILES.in  ru.po
08_I18n/src/: Makefile.am  stupid_guessor.c
09_PatchDiff/: 0.patch  1.patch  2.patch  3.patch  Makefile  labyrinth.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/tests/: Makefile.am  bench.ts  bufop.ts  memory.ts  new.ts
11_Documenting/: CMakeLists.txt  Doxyfile.in  README.md
11_Documenting/po/: ru.po
11_Documenting/src/: stupid_guessor.c
12_InstallPackaging/: CMakeLists.txt  Doxyfile.in  README.md  cmake_uninstall.cmake.in
12_InstallPackaging/lib/: CMakeLists.txt  Doxyfile.in  README.md
12_InstallPackaging/lib/src/: CMakeLists.txt  roman.c  roman.h
12_InstallPackaging/lib/tests/: CMakeLists.txt  basic.ts  result.ts  roman_test.ts
12_InstallPackaging/po/: ru.po
12_InstallPackaging/src/: stupid_guessor.c
